force-app/main/default/objects/amc__Program__c/amc__Program__c.object-meta.xml
<CustomObject>
    <description>The Program Object captures high-level information relation to a strategic program. The Program can comprise of multiple Projects.</description>
    <label>Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>