force-app/main/default/objects/amc__Program__c/fields/amc__Priority__c.field-meta.xml
<CustomField>
    <fullName>amc__Priority__c</fullName>
    <inlineHelpText>Identifies the Priority of the Program</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>