force-app/main/default/objects/amc__Program__c/fields/amc__Program_Notes__c.field-meta.xml
<CustomField>
    <fullName>amc__Program_Notes__c</fullName>
    <inlineHelpText>Detailed notes on the Program</inlineHelpText>
    <label>Program Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>