force-app/main/default/objects/amc__Program__c/fields/amc__Program_Reference__c.field-meta.xml
<CustomField>
    <fullName>amc__Program_Reference__c</fullName>
    <inlineHelpText>Internal reference number for the Program</inlineHelpText>
    <label>Program Reference #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>